--- a/checkout.html
+++ b/checkout.html
@@ -12,9 +12,6 @@
   <body>
     <div id="grid-container">
       <header id="global-header">
-        <a href="index.html">
-          <img id="main-logo" src="https://picsum.photos/200" alt="Hovedlogo" />
-        </a>
         <nav class="flex-space-between">
           <form id="search-bar">
             <label for="search">
@@ -27,23 +24,37 @@
           <ul class="flex-menu">
             <li><a href="index.html">Hjem</a></li>
             <li><a href="product.html">Produkter</a></li>
+            <li>
+              <a href="index.html"
+                ><img
+                  id="main-logo"
+                  src="https://picsum.photos/200"
+                  alt="Hovedlogo for nettsiden"
+              /></a>
+            </li>
             <li><a href="index.html#categories">Kategorier</a></li>
             <li><a href="#contact-info">Kontakt oss</a></li>
+            <li>
+              <a href="#" class="icons"
+                ><span><i class="fa-regular fa-user"></i></span
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="icons"
+                ><span><i class="fa-regular fa-heart"></i></span
+              ></a>
+            </li>
+            <li>
+              <a href="checkout.html" class="icons"
+                ><span><i class="fa-solid fa-cart-shopping"></i></span
+              ></a>
+            </li>
           </ul>
-          <a href="#"
-            ><span><i class="fa-regular fa-user"></i></span
-          ></a>
-          <a href="#"
-            ><span><i class="fa-regular fa-heart"></i></span
-          ></a>
-          <a href="checkout.html"
-            ><span><i class="fa-solid fa-cart-shopping"></i></span
-          ></a>
         </nav>
       </header>
       <main>
-        <h1>Kasse</h1>
-        <section>
+        <h1 id=" ">Kasse</h1>
+        <section id="user-cart">
           <h2>1. SHOPPINGBAGGEN DIN</h2>
           <article>
             <img src="bilder/dressjakke.jpg" alt="Produktet" />
@@ -64,7 +75,8 @@
             <p>Farge: Blå</p>
           </article>
         </section>
-        <section>
+
+        <section id="user-info">
           <h2>2. DINE OPPLYSNINGER</h2>
           <form method="post">
             <label for="firstname">
@@ -99,7 +111,7 @@
             </label>
             <label for="postnumber">
               <input
-                type="text"
+                type="number"
                 name="postnumber"
                 placeholder="Postnummer*"
                 id="postnumber"
@@ -117,55 +129,68 @@
                 required
               />
             </label>
+            <label for="saveButton">
+              <input id="saveButton" type="submit" name="save" value="Lagre" />
+            </label>
+            <a href="index.html">Avbryt</a>
           </form>
-          <button id="saveButton" onclick="">Lagre</button>
-          <button id="cancelButton" onclick="">Avbryt</button>
         </section>
-        <section>
-          <h3>3. LEVERING</h3>
-          <label>
-            <input type="radio" name="choice" />
-            Express Hjemlevering
-          </label>
-          <label>
-            <input type="radio" name="choice" />
-            Ekspress Pakke til utleveringssted
-          </label>
-          <label>
-            <input type="radio" name="choice" />
-            Standard Hjemlevering
-          </label>
+
+        <section id="user-delivery">
+          <h2>3. LEVERING</h2>
+          <form>
+            <p>LEVERINGSVALG</p>
+            <label>
+              <input type="radio" name="choice" />
+              Ekspress Hjemlevering
+            </label>
+            <label>
+              <input type="radio" name="choice" />
+              Ekspress Pakke til utleveringssted
+            </label>
+            <label>
+              <input type="radio" name="choice" />
+              Standard Hjemlevering
+            </label>
+          </form>
         </section>
-        <section>
-          <h3>4. BETALING</h3>
-          <p>BETAL MED KORT</p>
-          <label for="cardnumber">
-            Kortnummer
+        <section id="user-pay">
+          <h2>4. BETALING</h2>
+          <form>
+            <p id="pay-with-card">BETAL MED KORT</p>
+            <label for="cardnumber">
+              Kortnummer
+              <input
+                type="number"
+                name="cardnumber"
+                placeholder="4124 **** 8532 ****"
+                required
+              />
+            </label>
+            <label for="carddate">
+              Utløpsdato
+              <input type="date" name="carddate" required />
+            </label>
+            <label for="CVCnumber">
+              CVC/CVV
+              <input
+                type="number"
+                name="CVCnumber"
+                placeholder="CVC/CVV"
+                required
+              />
+            </label>
+            <span>
+              <p>Å betale inkl. mva.</p>
+              <p>1 199 kr</p>
+            </span>
             <input
-              type="number"
-              name="cardnumber"
-              placeholder="4124 **** 4125 ****"
-              id="cardnumber"
-              required
+              id="purchaseButton"
+              type="submit"
+              name="complete-purc"
+              value="Fullfør kjøp"
             />
-          </label>
-          <label for="carddate">
-            Utløpsdato
-            <input type="date" name="carddate" id="carddate" required />
-          </label>
-          <label for="CVCnumber">
-            CVC/CVV
-            <input
-              type="number"
-              name="CVCnumber"
-              placeholder="CVC/CVV"
-              id="CVCnumber"
-              required
-            />
-          </label>
-          <p>Å betale inkl. mva.</p>
-          <p>1 199 kr</p>
-          <button onclick="">Fullfør Kjøp</button>
+          </form>
           <p>
             Du bekrefter herved at opplysningene og dokumentene du har oppgitt
             er korrekte og fullstendige. Leverandøren forbeholder seg retten til
@@ -173,24 +198,26 @@
             eller ufullstendie opplysninger
           </p>
           <label id="newsletter">
-            <input type="radio" name="choice" />
+            <input type="checkbox" name="choice" />
             Ja takk! Send nyhetsbrev til meg.
           </label>
           <label id="offers-and-news">
-            <input type="radio" name="choice" />
+            <input type="checkbox" name="choice" />
             Jeg ønsker å motta tekstmeldinger med tilbud og nyheter.
           </label>
         </section>
       </main>
+
       <footer>
         <a href="index.html">
           <img
             id="footer-logo"
             src="https://picsum.photos/200"
-            alt="Hovedlogo i footer"
+            alt="Footer logoen for nettsiden"
           />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
         <h5>KONTAKT</h5>
         <ul id="contact-info">
           <li>
@@ -217,7 +244,7 @@
           <li><a href="#contant-info">Kontakt oss</a></li>
         </ul>
         <h5>SOSIALE MEDIER</h5>
-        <ul>
+        <ul id="social-media">
           <li>
             <a href="https://www.instagram.com/">
               <i class="fa-brands fa-instagram"></i>
