--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
           </p>
           <a href="#">FÅ EN PRØVE PAKKE I DAG</a>
         </section>
-        <section class="pop-sellers">
-          <h1>Våre mest populære produkter</h1>
-          <p>Oppdag det av det beste</p>
-          <p id="new-product">New Product</p>
-          <p id="special-price">Special Price</p>
-          <p id="best-sellers">Best Sellers</p>
-        </section>
         <section class="products">
+          <h1>Våre mest populære produkter</h1>
+          <div id="pop-sellers">
+            <p>Oppdag det av det beste</p>
+            <p id="new-product">New Product</p>
+            <p id="special-price">Special Price</p>
+            <p id="best-sellers">Best Sellers</p>
+          </div>
           <article class="product-card">
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
             <h3>Product name</h3>
@@ -80,6 +80,7 @@
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
+            <h3>Product name</h3>
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
             <h3>Product name</h3>
             <p>Kr 1999</p>
@@ -133,7 +134,7 @@
               src="https://picsum.photos/id/40/200/200"
               alt="Profilbilde til bruker"
             />
-            <p class="username">Mister Whisker</p>
+            <h6 class="username">Mister Whisker</h6>
             <p>
               Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
               Suspendisse laoreet ante interdum erat iaculis, sit amet porta
@@ -148,7 +149,7 @@
               src="https://picsum.photos/id/40/200/200"
               alt="Profilbilde til bruker"
             />
-            <p class="username">Mister Whisker</p>
+            <h6 class="username">Mister Whisker</h6>
             <p>
               Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
               Suspendisse laoreet ante interdum erat iaculis, sit amet porta
@@ -160,7 +161,7 @@
           </article>
           <article>
             <img src="https://picsum.photos/id/40/200/200" alt="Anmeldelser" />
-            <p class="username">Mister Whisker</p>
+            <h6 class="username">Mister Whisker</h6>
             <p>
               Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
               Suspendisse laoreet ante interdum erat iaculis, sit amet porta
@@ -186,23 +187,23 @@
         <h5>KONTAKT</h5>
         <ul id="contact-info">
           <li>
-            <span><i class="fa-solid fa-location-dot"></i></span>
-            Adresse: B R A Veien 4, 1757 Halden
+            <span><i class="fa-solid fa-location-dot"></i> Adresse:</span>
+            B R A Veien 4, 1757 Halden
           </li>
           <li>
-            <span><i class="fa-solid fa-phone"></i></span>
-            Telefon: 69 60 80 00
+            <span><i class="fa-solid fa-phone"></i> Telefon:</span>
+            69 60 80 00
           </li>
           <li>
-            <span><i class="fa-solid fa-envelope"></i></span>
-            E-post: halden@hiof.no
+            <span><i class="fa-solid fa-envelope"></i> E-post:</span>
+            halden@hiof.no
           </li>
           <li>
-            <span><i class="fa-solid fa-clock"></i></span>
-            Åpningstider: Stenger 15:00
+            <span><i class="fa-solid fa-clock"></i> Åpningstider:</span>
+            Stenger 15:00
           </li>
         </ul>
-        <h5>SNARVEIER</h5>
+        <h4>SNARVEIER</h4>
         <ul id="footer-nav">
           <li><a href="product.html">Produkter</a></li>
           <li><a href="index.html#categories">Kategorier</a></li>
