--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </form>
           <ul class="flex-menu">
             <li><a href="index.html">Hjem</a></li>
-            <li><a href="product.html">Produkter</a></li>
+            <li><a href="index.html#products">Produkter</a></li>
             <li>
               <a href="index.html"
                 ><img
@@ -61,7 +61,7 @@
           </p>
           <a href="#">FÅ EN PRØVE PAKKE I DAG</a>
         </section>
-        <section class="products">
+        <section class="products" id="products">
           <h1>Våre mest populære produkter</h1>
           <div id="pop-sellers">
             <p>Oppdag det av det beste</p>
@@ -71,47 +71,51 @@
           </div>
           <article class="product-card">
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
-            <h3>Product name</h3>
-            <p>Kr 1999</p>
-          </article>
-          <article class="product-card">
-            <h3>Product name</h3>
-            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-card">
             <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
+            <p>Kr 1999</p>
+          </article>
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/200" alt="Produktet" />
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
         </section>
-
         <section id="categories">
           <h2>Våre mest populære kategorier</h2>
           <p>Oppdag det beste av det beste</p>
-          <article><h4>Category 1</h4></article>
-          <article><h4>Category 2</h4></article>
-          <article><h4>Category 3</h4></article>
-          <article><h4>Category 4</h4></article>
-          <article><h4>Category 5</h4></article>
+          <div id="grid-categories">
+            <article id="category1"><h4>Category 1</h4></article>
+            <!--Image by <a href="https://pixabay.com/users/jhenning-8658480/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8193789">beauty_of_nature</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8193789">Pixabay</a>-->
+            <article id="category2"><h4>Category 2</h4></article>
+            <!--Image by <a href="https://pixabay.com/users/kathas_fotos-11174123/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7313700">Katharina N.</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7313700">Pixabay</a>-->
+            <article id="category3"><h4>Category 3</h4></article>
+            <!--Image by <a href="https://pixabay.com/users/chiemseherin-1425977/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3513547">🌼Christel🌼</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3513547">Pixabay</a>-->
+            <article id="category4"><h4>Category 4</h4></article>
+            <!--Image by <a href="https://pixabay.com/users/robsonmelo-1001611/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5146826">Robson veneziani</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5146826">Pixabay</a>-->
+            <article id="category5"><h4>Category 5</h4></article>
+            <!--Image by <a href="https://pixabay.com/users/peterg63-11841274/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8364511">Peter G.</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8364511">Pixabay</a>-->
+          </div>
         </section>
-
         <section class="reviews">
           <h3>Anmeldelser</h3>
           <article>
@@ -173,7 +177,6 @@
           </article>
         </section>
       </main>
-
       <footer>
         <a href="index.html">
           <img
@@ -183,7 +186,6 @@
           />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
         <h5>KONTAKT</h5>
         <ul id="contact-info">
           <li>
