--- a/product.html
+++ b/product.html
@@ -23,14 +23,15 @@
           </form>
           <ul class="flex-menu">
             <li><a href="index.html">Hjem</a></li>
-            <li><a href="product.html">Produkter</a></li>
+            <li><a href="index.html#products">Produkter</a></li>
             <li>
-              <a href="index.html"
-                ><img
+              <a href="index.html">
+                <img
                   id="main-logo"
                   src="https://picsum.photos/200"
                   alt="Hovedlogo for nettsiden"
-              /></a>
+                />
+              </a>
             </li>
             <li><a href="index.html#categories">Kategorier</a></li>
             <li><a href="#contact-info">Kontakt oss</a></li>
@@ -65,20 +66,20 @@
             <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
             <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
             <!--Image by <a href="https://pixabay.com/users/clangs-825633/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">智铿 梁</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">Pixabay</a>-->
-            <h1>Produktnavn</h1>
+            <a href="product.html"><h1>Produktnavn</h1></a>
             <p id="brand">MERKENAVN</p>
             <p>5 195 kr inkl. mva.</p>
             <p>Farge: <span id="color-on-product">Blå</span></p>
           </article>
         </section>
-        <section id="sim-prod">
+        <aside id="sim-prod">
           <h2>Lignende produkter</h2>
           <article class="product-display">
             <img
               src="https://picsum.photos/id/48/600/400"
               alt="produkt bilde"
             />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-display">
@@ -86,7 +87,7 @@
               src="https://picsum.photos/id/48/600/400"
               alt="produkt bilde"
             />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-display">
@@ -94,7 +95,7 @@
               src="https://picsum.photos/id/48/600/400"
               alt="produkt bilde"
             />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-display">
@@ -102,7 +103,7 @@
               src="https://picsum.photos/id/48/600/400"
               alt="produkt bilde"
             />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-display">
@@ -110,7 +111,7 @@
               src="https://picsum.photos/id/48/600/400"
               alt="produkt bilde"
             />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
           <article class="product-display">
@@ -118,10 +119,10 @@
               src="https://picsum.photos/id/48/600/400"
               alt="produkt bilde"
             />
-            <h3>Product name</h3>
+            <a href="product.html"><h3>Product name</h3></a>
             <p>Kr 1999</p>
           </article>
-        </section>
+        </aside>
       </main>
       <footer>
         <a href="index.html">
@@ -132,7 +133,6 @@
           />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
         <h4>KONTAKT</h4>
         <ul id="contact-info">
           <li>
